# SeasideVPN

./: .codespellrc  .dockerignore  .gitignore  .gitmodules  .markdownlint.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  bump-version.sh  dmp.txt
.github/: .prettierrc.json  README.md  package.json
.github/actions/setup-server/: action.yml  compose.yml  configure_viridian_test.mjs  resolve-target.cjs  resolve-target.js
.github/scripts/: .prettierrc.json  configure_viridian_test.mjs  deploy_whirlpool_beget.mjs  deploy_whirlpool_servaone.mjs  package.json  prepare_release_artifacts.mjs  prepate_release_artifacts.mjs  script_utils.mjs
.github/workflows/: build.yml  docker.yml  lint.yml  publish.yml  test.yml
caerulean/: README.md
caerulean/whirlpool/: .gitignore  Dockerfile  Dockerfile.prod  Dockerfile.test  Dockerfile.test.dockerignore  Makefile  README.md  example.conf.env  go.mod  whirlpool.sh
caerulean/whirlpool/crypto/: asymm.go  asymmetric.go  cipher.go  cipher_test.go  obscure.go  symm.go  (+5 more)
test/: docker-compose.yml
turquoise/: crypt.yml  no-check.yml  tests.yml
vessels/: authentication.proto  certificates.proto  common.fbs  common.proto  connection.proto  control.proto  general.proto  network_messages.proto  tokens.proto  user_data.proto  whirlpool_viridian.fbs  whirlpool_viridian.proto
viridian/: .clang-format  .clang-tidy  README.md
viridian/algae/: .gitignore  Dockerfile  Makefile  README.md  __init__.py  example.conf.env  main.py  outputs.py  pyproject.toml  requirements.txt  script.py  tunnel.py
viridian/algae/docker/: Dockerfile.algae  Dockerfile.echo  Dockerfile.router  Dockerfile.whirlpool  compose.base.yml  compose.default.yml  compose.domain.yml  compose.integration.yml  compose.local.yml  compose.remote.yml  compose.standalone.yml  compose.unit.yml  echo_server.py  test.conf.env
viridian/algae/protocol/: README.md
viridian/algae/scripts/: __init__.py  _utils.py  codestyle.py  misc.py  process.py  test.py  utils.py
viridian/algae/setup/: __init__.py  __main__.py  base.py  certificates.py  default.py  main.py  specific.py  utils.py  whirlpool.py
viridian/algae/sources/: __init__.py  __main__.py  client.py  control.py  coordinator.py  crypto.py  main.py  obscure.py  outputs.py  requests.py  tunnel.py  utils.py  version.py  viridian.py
viridian/algae/sources/automation/: simple_client.py  testing_client.py  whirlpool_fixtures.py
viridian/algae/sources/connection/: core.py  socket.py  utils.py
viridian/algae/sources/interaction/: __init__.py  system.py  whirlpool.py
viridian/algae/sources/protocol/: __init__.py  port_core.py  port_socket.py  socket.py  typhoon_core.py  typhoon_socket.py  utils.py
viridian/algae/sources/typhoon/: core.py  socket.py  utils.py
viridian/algae/sources/utils/: asyncos.py  crypto.py  misc.py
viridian/algae/test/: test_integration.py  utils.py
viridian/algae/tests/: conftest.py  test_integration.py  test_integration_api.py  test_integration_client.py  test_local.py  test_remote.py  test_unit.py  test_unit_crypto.py  test_unit_firewall.py  test_unit_integration.py  test_unit_misc.py  test_unit_obscure.py  test_unit_protocol.py  test_unit_protocol_port.py  test_unit_requests.py
viridian/algae/typhoon/: README.md  example.conf.env  port.ipynb  showcase.ipynb  typhoon.ipynb  utils.py
viridian/algae/typhoon/docker/: Dockerfile  compose.yml  server.py
viridian/littoral/: Makefile  README.md  analysis_options.yaml  build.yaml  pubspec.yaml
viridian/reef/: Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  build.rs  example.conf.env
viridian/reef/.cargo/: config.toml
viridian/reef/cli_executable/: Cargo.toml
viridian/reef/cli_executable/src/: viridian.rs
viridian/reef/cli_executable/src/tunnel/: linux.rs  mod.rs
viridian/reef/cli_executable/tests/tunnel/: linux.rs
viridian/reef/common_library/: Cargo.toml
viridian/reef/common_library/lib/: rng.rs
viridian/reef/common_library/lib/crypto/: asymmetric.rs
viridian/reef/common_library/lib/protocol/: common.rs  port_core.rs
viridian/reef/common_library/lib/tunnel/: linux.rs
viridian/reef/docker/: Dockerfile  Dockerfile.reef  compose.yml  host.env
viridian/reef/rust_library/: Cargo.toml  build.rs
viridian/reef/rust_library/lib/: general.rs
viridian/reef/rust_library/lib/bytes/: buffer.rs
viridian/reef/rust_library/lib/crypto/: symmetric.rs
viridian/reef/rust_library/lib/protocol/: port_client.rs  typhoon_core.rs
viridian/reef/rust_library/lib/viridian/: linux.rs  mod.rs
viridian/reef/rust_library/tests/tunnel/: linux.rs
viridian/reef/shared_library/: Cargo.toml  build.rs  cbindgen.toml
viridian/reef/shared_library/lib/: mod.rs  viridian.rs
viridian/reef/shared_library/lib/tunnel/: linux.rs  mod.rs
viridian/reef/src/: cli.rs  lib.rs
viridian/reef/src/bindings/: standard.rs
viridian/reef/src/lib/: coordinator.rs  general.rs  link.rs  mod.rs  nl_utils.rs  rng.rs  runtime.rs  tunnel.rs  utils.rs  viridian.rs
viridian/reef/src/lib/bytes/: buffer+cp.rs  buffer.rs  mod.rs  pool.rs  utils.rs
viridian/reef/src/lib/coordinator/: linux.rs  mod.rs  windows.rs
viridian/reef/src/lib/crypto/: asymmetric.rs  mod.rs  symmetric.rs
viridian/reef/src/lib/protocol/: common.rs  mod.rs  port_client.rs  port_core.rs  typhoon_client.rs  typhoon_core.rs  utils.rs
viridian/reef/src/lib/tunnel/: linux.rs  mod.rs  nl_utils.rs  ptr_utils.rs  utils.rs  windows.rs
viridian/reef/src/lib/viridian/: linux.rs  mod.rs  windows.rs
viridian/reef/standalone_executable/: Cargo.toml
viridian/reef/standalone_executable/src/: mod.rs
viridian/reef/test_library/: Cargo.toml
viridian/reef/test_library/lib/: mod.rs
viridian/reef/test_library/lib/tunnel/: linux.rs
viridian/reef/tests/: integration.rs  nl_utils.rs  rng.rs  tunnel.rs  tunnel_linux.rs
viridian/reef/tests/crypto/: symmetric.rs
viridian/reef/tests/tunnel/: linux.rs  utils.rs
viridian/submerged/: Cargo.toml  Dockerfile  Makefile
viridian/submerged/docker/: compose.yml
viridian/submerged/src/bindings/: standard.rs
viridian/whirlpool/: Dockerfile  Makefile
(+92 files in other folders)
