[package]
name = "SeasideVPN-Reef"
version = "0.0.3"
edition = "2021"
description = "A production-ready SeasideVPN client for Linux and Windows"
authors = [
    "Alexander Sergeev <alexander.sergeev@onmail.com>"
]



[dependencies]
async-dropper = { version = "^0.3.1", features = [ "tokio", "simple" ] }
async-trait = "^0.1.88"
base64 = "^0.22.1"
bincode = "^2.0.1"
blake2 = "^0.10.6"
byte-pool = "^0.2.4"
bytes = "^1.10.1"
chacha20poly1305 = "^0.10.1"
env_logger = "^0.11.5"
futures = "^0.3.31"
ipnet = "^2.10.1"
iptables = "^0.5.1"
lazy_static = "^1.5.0"
log = "^0.4.22"
num_enum = "^0.7.3"
rand = "^0.8.5"
simple-error = "^0.3.1"
socket2 = "^0.5.9"
structopt = { version = "^0.3.26", optional = true }
tokio = { version = "^1.45.0", features = ["macros", "rt-multi-thread", "process", "signal", "net"] }
tun = { version = "^0.7.1", features = ["async"] }
url = "^2.5.4"
x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }

[target.'cfg(target_os = "linux")'.dependencies]
neli = "^0.6.4"
nftables = "^0.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
etherparse = { version = "^0.18.0" }
windivert = { version = "^0.6.0", features = ["static"] }
windows = { version = "^0.58.0", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }

[dev-dependencies]
regex = "^1.11.1"



[features]
cli-exec = ["structopt"]



[lib]
name = "reeflib"
path = "src/lib/mod.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"
required-features = ["cli-exec"] 
