[package]
name = "submerged"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
prost = "0.12.4"
tonic = "0.11.0"
prost-types = "0.12.4"
dns-lookup = "2.0.4"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
tun2 = { version = "1.3.0", features = ["async"] }

[target.'cfg(target_os="linux")'.dependencies]
neli = "0.6.4"
iptables = "0.5.1"

[build-dependencies]
tonic-build = "0.11.0"


[[bin]]
name = "standard"
path = "src/bindings/standard.rs"
