[package]
name = "reef-common"
version = "0.0.4"
edition = "2021"
description = "A library for constructing SeasideVPN clients"
authors = [
    "Alexander Sergeev <alexander.sergeev@onmail.com>"
]



[dependencies]
bincode = "^2.0.1"
blake2 = "^0.10.6"
bytes = "^1.10.1"
cached = "^0.56.0"
chacha20poly1305 = "^0.10.1"
futures = "^0.3.31"
generic-array = "=0.14.7"  # TODO: remove once https://github.com/RustCrypto/traits/issues/2036 is resolved!
ipnet = "^2.10.1"
lazy_static = "^1.5.0"
log = "^0.4.22"
num_enum = "^0.7.3"
prost = "^0.14.1"
rand = "^0.8.5"
simple-error = "^0.3.1"
socket2 = "^0.6.0"
tokio = { version = "^1.47.1", features = ["full"] }
x25519-dalek = { version = "^2.0.1", features = ["static_secrets"] }

[target.'cfg(target_os = "linux")'.dependencies]
nftables = "^0.6.3"
rtnetlink = "^0.18.0"
tun = { version = "^0.8.3", features = ["async"] }

[target.'cfg(target_os = "windows")'.dependencies]
etherparse = "^0.19.0"
serde = "^1.0.219"
windivert = "^0.6.0"
windows = { version = "^0.61.3", features = ["Win32_Foundation", "Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_NetworkManagement_Ndis"] }
wmi = "^0.17.2"

[build-dependencies]
prost-build = "^0.14.1"
protoc-bin-vendored = "^3.2.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
reqwest = { version = "^0.12.23", features = ["blocking", "json"] }
zip = "^4.5.0"

[dev-dependencies]
reef-test = { path = "../test_library" }
regex = "^1.11.1"



[features]
test = []



[lib]
name = "reeflib"
path = "lib/mod.rs"
