[package]
name = "reeftest"
version = "0.0.4"
edition = "2021"
description = "A production-ready SeasideVPN client for Linux and Windows"
authors = [
    "Alexander Sergeev <alexander.sergeev@onmail.com>"
]



[dependencies]
regex = "^1.11.1"
simple-error = "^0.3.1"



[lib]
name = "reeftest"
path = "lib/mod.rs"
crate-type = ["rlib"]
